# DULoRA-public-demo

./: .gitignore  CITATION.cff  LICENSE  README.md  README.ru.md  pyproject.toml  requirements.txt
configs/public/: demo.yaml
docs/: methodology_overview.md  reproducibility.md
examples/: minimal_text_classification.py
scripts/demo/: run_demo.py
src/dulora_demo/: __init__.py  allocator_interface.py  data.py  demo_allocator.py  evaluator.py  model.py  reproducibility.py  trainer.py
tests/: test_allocator_contract.py  test_metrics.py  test_pipeline.py
